courses/430_programming-languages/assignment-6/tests/error/hw4_error22.nex
var i:int; var j:none; var b:bool;
print "should not get here:n";
1 / 0;
j = none;
i = 3;
b = j > i;
